# mkdbg

./: .gitignore  CMakeLists.txt  README.md  TODOS.md
.github/workflows/: ci.yml  hil-gate.yml  release.yml
arch/: arch.h  cortex_m.c  riscv32.c
bsp/: board.c
cmake/: arm-none-eabi.cmake
configs/bringup/: manifest.yaml
docs/: DEVELOPER_GUIDE.md  OVWATCH.md
examples/stm32f446/: CMakeLists.txt
examples/stm32f446/bsp/: mpu_demo.c
examples/stm32f446/cmsis/CMSIS/Include/: core_cm4.h  stdint.h
examples/stm32f446/demo/: hello.asm  hello.c  vm32_smoke.batch
examples/stm32f446/freertos/Source/portable/Common/: mpu_wrappers_v2.c
examples/stm32f446/freertos/Source/portable/MemMang/: heap_4.c
examples/stm32f446/include/: analysis_engine.h  bringup_manifest_gen.h  dependency_graph.h  fault.h  scenario.h  static_assert.h  vm32_scenarios.h
examples/stm32f446/scenarios/: io_flood.asm  irq_starvation.asm
examples/stm32f446/scripts/: analysis_engine_host_tests.sh  board_regress.py  bringup_compile.py  bringup_compile_host_tests.sh  bringup_host_tests.sh  bringup_regress.py  bringup_ui_host_tests.sh  build.sh  build_identity_host_tests.sh  build_mkdbg_native_host_tests.sh  dependency_graph_host_tests.sh  driver_profile_compare_regress.py  flash.sh  hil_gate.sh  install_mkdbg_host_tests.sh  kdi_driver_regress.py  kdi_host_tests.sh  kdi_irq_regress.py  mkdbg_host_tests.sh  mkdbg_native_cmake_host_tests.sh  mkdbg_native_host_tests.sh  ovwatch_host_tests.sh  profile_compare_host_regress.sh  regress_common.py  regression_summary.py  regression_summary_host_tests.sh  semantic_telemetry_host_tests.sh  sonic_lite_host_tests.sh  sonic_regress.py  triage_bundle.py  triage_bundle_host_tests.sh  triage_replay.py  triage_replay_host_tests.sh  vm32_ci.sh  vm32_demo.sh  vm32_host_tests.sh
examples/stm32f446/src/: analysis_engine.c  bringup_phase.c  dependency_graph.c  interrupts.c  semantic_telemetry.c  sonic_lite.c  vm32_scenarios.c
freertos/: FreeRTOSConfig.h
freertos/Source/: queue.c
freertos/Source/portable/GCC/ARM_CM4_MPU/: port.c
include/: board.h  bringup_phase.h  kdi.h  mpu_demo.h  semantic_telemetry.h  sonic_lite.h  vm32.h
linker/: STM32F446ZE_FLASH.ld
probe-bridge/: Cargo.toml
probe-bridge/include/: probe_bridge.h
probe-bridge/src/: lib.rs  rsp.rs
scenarios/: io_flood.vm  mpu_overflow.asm
scripts/: install.sh
src/: core.c  debug_cli.c  debug_session.c  debug_session.h  debug_tui.c  dwarf.c  dwarf.h  fault.c  kdi.c  launcher.c  main.c  mkdbg.h  parse.c  probe_transport.c  probe_transport.h  rsp_transport.c  rsp_transport.h  scenario.c  syscalls.c  thumb_dis.c  thumb_dis.h  transport.h  uart_transport.c  uart_transport.h  util.c  vm32.c
startup/: startup_stm32f446xx.s
tests/: dwarf_test.c  test_thumb_dis.c  vm32_host_tests.c
tools/: 69-probe-rs.rules  analysis_engine_host_tests.sh  bringup_compile.py  bringup_host_tests.sh  build.sh  build_mkdbg_native.sh  build_mkdbg_native_host_tests.sh  dependency_graph_host_tests.sh  install_mkdbg_host_tests.sh  kdi_host_tests.sh  mkdbg.h  mkdbg_native.c  mkdbg_native_host_tests.sh  mkdbg_parse.c  semantic_telemetry_host_tests.sh  sonic_lite_host_tests.sh  triage_bundle.py  vm32_ci.sh  vm32_host_tests.sh
