[package]
name = "probe-bridge"
version = "0.1.0"
edition = "2021"
description = "C FFI bridge exposing probe-rs as a static library for mkdbg"

[lib]
name = "probe_bridge"
crate-type = ["staticlib"]

[dependencies]
probe-rs = { version = "0.24", default-features = true }

[dev-dependencies]
# unit tests run without hardware; only rsp module is exercised
